--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Task</string>
+    <string name="task">任务</string>
+    <string name="focus">专注</string>
+    <string name="mine">我的</string>
 </resources>
